Ajout de google et du register of organisation mais cette fois avec getignore